# pathology-term-consensus-kit

./: .gitignore  CHAT-ONLY-START-HERE.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: ATTACHMENT_CONTRACT.md  INITIALIZATION.md  OPENCLAW_CHAT_HANDOFF.md  OPENCLAW_ONE_SHOT_PROMPT.md  SOP.md  WEAK_MODEL_RUNBOOK.md
schemas/: project.schema.json  run_manifest.schema.json  term_catalog.schema.json
scripts/: bootstrap_project.py
skills/pathology-terminology-standardization/: SKILL.md
skills/pathology-terminology-standardization/references/: config-guide.md  openclaw-chat-handoff.md  runbook.md  weak-model-checklist.md
src/path_term_kit/: __init__.py  aggregate.py  cli.py  config.py  doctor.py  inspection.py  manifest.py  match.py  package.py  privacy.py  project_builder.py  readers.py  scan.py  term_catalog.py
src/path_term_kit/assets/: __init__.py  project.yaml
src/path_term_kit/assets/fake_subspecialty/: project.yaml  reports.csv  terms.csv
src/path_term_kit/outputs/: __init__.py  deck.py  workbooks.py
templates/: deck_outline.md.j2  questionnaire_columns.yaml
tests/: test_pipeline.py
